test/classes/initializers/generics/phase1/multipleInits2.good
multipleInits2.chpl:6: In initializer:
multipleInits2.chpl:10: error: multiple initializations of field "f2"
